# stockgenie

./: pyproject.toml
src/: main.py
src/agents/: stockgenie.py
src/config/: config.py
src/engine/: prompts.yaml
src/templates/: chat.html
src/tools/: kis.py  news_collector.py  tools.py
