[project]
name = "stockgenie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.7",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "pandas>=2.3.3",
    "pykis>=0.7.0",
]
